@@ -419,6 +419,14 @@ mirror_tile = mirror
 ; Show the kid's mirror image in the mirror. (default = true)
 show_mirror_image = true
 
+; Level and room where the shadow steals a potion.
+shadow_steal_level = 5
+shadow_steal_room = 24
+
+; Level and room where the shadow steps on a button.
+shadow_step_level = 6
+shadow_step_room = 1
+
 ; Level where the kid can progress to the next level by falling off a specific room. (default: level = 6, room = 1)
 falling_exit_level = 6
 falling_exit_room = 1
