@@ -364,6 +364,12 @@ static int global_ini_callback(const char *section, const char *name, const char
 		process_byte("mirror_row", &custom_saved.mirror_row, &row_names_list);
 		process_byte("mirror_tile", &custom_saved.mirror_tile, &tile_type_names_list);
 		process_boolean("show_mirror_image", &custom_saved.show_mirror_image);
+
+		process_byte("shadow_steal_level", &custom_saved.shadow_steal_level, &never_is_16_list);
+		process_byte("shadow_steal_room", &custom_saved.shadow_steal_room, NULL);
+		process_byte("shadow_step_level", &custom_saved.shadow_step_level, &never_is_16_list);
+		process_byte("shadow_step_room", &custom_saved.shadow_step_room, NULL);
+
 		process_word("falling_exit_level", &custom_saved.falling_exit_level, &never_is_16_list);
 		process_byte("falling_exit_room", &custom_saved.falling_exit_room, NULL);
 		process_word("falling_entry_level", &custom_saved.falling_entry_level, &never_is_16_list);
@@ -676,6 +682,13 @@ void load_dos_exe_modifications(const char* folder_name) {
 		process(&custom_saved.mirror_tile, 1, {0x08de3, 0x0a493, 0x09290, 0x099d0, 0x08d4c, 0x09e7c});
 		process(temp_bytes, 1, {0x051a2, 0x06852, 0x05636, 0x05d76, 0x050f2, 0x06222});
 		if (read_ok) custom_saved.show_mirror_image = (temp_bytes[0] != 0xEB);
+
+		process(&custom_saved.shadow_steal_level, 1, {-1, 0x5017, -1, -1, -1, -1});
+		process(&custom_saved.shadow_steal_room, 1, {-1, 0x5021, -1, -1, -1, -1});
+
+		process(&custom_saved.shadow_step_level, 1, {-1, 0x4FE7, -1, -1, -1, -1});
+		process(&custom_saved.shadow_step_room, 1, {-1, 0x4FF1, -1, -1, -1, -1});
+
 		process(&custom_saved.falling_exit_level, 1, {0x03eb2, 0x05562, -1, -1, -1, -1});
 		process(&custom_saved.falling_exit_room, 1, {0x03eb9, 0x05569, -1, -1, -1, -1});
 		process(&custom_saved.falling_entry_level, 1, {0x04cbd, 0x0636d, -1, -1, -1, -1});
